--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,35 +14,35 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-    
+
     - name: Install system dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y python3-pygame libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev
-    
+
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pytest pytest-cov
         pip install -e .
-    
+
     - name: Run tests with coverage
       run: |
         pytest tests/ -v --cov=tetris --cov-report=xml --cov-report=html
       env:
         SDL_VIDEODRIVER: dummy
         SDL_AUDIODRIVER: dummy
-    
+
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
       with:
@@ -50,7 +50,7 @@ jobs:
         flags: unittests
         name: codecov-umbrella
         fail_ci_if_error: false
-    
+
     - name: Archive coverage report
       uses: actions/upload-artifact@v4
       with:
@@ -61,60 +61,55 @@ jobs:
   lint:
     name: Code Quality Checks
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    
+
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
-    
+        cache: 'pip'
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint black flake8 mypy
+        pip install black isort flake8 pylint mypy
         pip install -r requirements.txt
 
-    - name: Check code formatting with black
-      run: black --check tetris.py tests/
-
-    - name: Lint with flake8
-      run: flake8 tetris.py tests/ --max-line-length=100 --ignore=E203,W503
-
-    - name: Lint with pylint
-      run: pylint tetris.py --disable=C0103,C0114,C0115,C0116
+    - name: Run lint check script
+      run: python scripts/lint_fix.py --check-only --verbose
 
   build:
     name: Build Distribution
     runs-on: ubuntu-latest
     needs: [test, lint]
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    
+
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
-    
+
     - name: Install build dependencies
       run: |
         python -m pip install --upgrade pip
         pip install build wheel setuptools
-    
+
     - name: Build package
       run: python -m build
-    
+
     - name: Upload distribution artifacts
       uses: actions/upload-artifact@v4
       with:
         name: python-package-distributions
         path: dist/
         retention-days: 7
-    
+
     - name: Check distribution
       run: |
         pip install twine
@@ -123,16 +118,16 @@ jobs:
   security:
     name: Security Scan
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    
+
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
-    
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
