--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,6 @@ repos:
       - id: black
         name: Format code with Black
         language_version: python3
-        args: [--line-length=100]
 
   # isort - Import sorter
   - repo: https://github.com/pycqa/isort
@@ -19,7 +18,6 @@ repos:
     hooks:
       - id: isort
         name: Sort imports with isort
-        args: [--profile=black, --line-length=100]
 
   # Flake8 - Style guide enforcement
   - repo: https://github.com/pycqa/flake8
@@ -27,8 +25,6 @@ repos:
     hooks:
       - id: flake8
         name: Lint with Flake8
-        args: [--max-line-length=100, --extend-ignore=E203, W503]
-        additional_dependencies: [flake8-docstrings]
 
   # Pylint - Code analyzer
   - repo: https://github.com/pycqa/pylint
@@ -36,8 +32,7 @@ repos:
     hooks:
       - id: pylint
         name: Lint with Pylint
-        args: [--rcfile=.pylintrc]
-        additional_dependencies: [pygame]
+        additional_dependencies: [pygame, pytest]
 
   # Built-in hooks
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -60,15 +55,7 @@ repos:
         name: Check for debugger imports
       - id: mixed-line-ending
         name: Fix mixed line endings
-        args: [--fix=lf]
-
-  # Prettier - For markdown, YAML, JSON
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v4.0.0-alpha.8
-    hooks:
-      - id: prettier
-        name: Format with Prettier
-        types_or: [markdown, yaml, json]
+        args: [--fix=auto]
 
 # Run these hooks on every commit
 default_install_hook_types: [pre-commit, pre-push]
